--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 /RWT_Cache/
+/Assets/Scenes/
+
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
